db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-server
spec:
  selector: 
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
