webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: oulahn-webapp
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      #nodePort: 31500
  type: LoadBalancer
