webapp-servicenode.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-servicenode
spec:
  selector:
    app: oulahn-webapp-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
